Mobile - Spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ h3 {
     }
 
     .testimonial-col img{
-        margin-left: 0px;
+        margin-left: 10px;
         margin-right: 15px;
     }
 }
